kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-belzinha
  labels:
    app: site
spec:
  replicas: 2
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
        - name: webserver
          image: mateusclira/site-belzinha:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 80
