kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: mateusclira
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.mateusebelzinha.com.br/
    secretName: mateuscliratls
  rules:
  - host: www.mateusebelzinha.com.br/
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: svc-site
            port: 
              number: 80
  rules:
  - host: www.mateusebelzinha.com.br/
    http:
      paths:
      - path: /belzinha
        pathType: Prefix
        backend:
          service: 
            name: svc
            port: 
              number: 80
